# words-from-wiktionary-dump

./: .gitignore  01_create-wordlist-from-wiktionary.py  02-read-books.py  03-sentence-analyzer.py  03-unknown-words.py  README.md  create_dictionary.py  experiment-read-book.py  experiment-read-books.py  filter_out_books_with_too_much_exotic_words.py  helper.py  histogram_counter.py  lemmatize.py  pyproject.toml  run.py  spellcheck_one_book.py
model/: __init__.py  book_parse_result.py
wiki/: __init__.py  dump_analyzer.py  page.py
