[tool.poetry]
name = "words-from-wiktionary-dump"
version = "0.1.0"
description = ""
authors = ["Adam Benda <adam@adasek.cz>"]
readme = "README.md"
packages = [{include = "wiki"}, {include = "objects"}]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.3"
wikitextparser = "^0.53.0"
rdflib = "^7.0.0"
nltk = "^3.8.1"
charset-normalizer = "^3.2.0"
pyicu = "^2.11"
pandas = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
